--- a/Day02/Day02.fsproj
+++ b/Day02/Day02.fsproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net10.0</TargetFramework>
+        <RootNamespace>Day2</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
